web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-await-with-object-exp-in-function/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,9)
2|  await { foo };
 |       ^
